document tunnel policy
